janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__long_form_unquote_in_a_quasiquote_is_evaluated.snap
---
source: src/analysis/scopes/tests.rs
expression: "(defmacro m [x] (quasiquote (a (unquote |x))))"
---
----- BINDING
(defmacro m [x] (quasiquote (a (unquote x))))
             ▔                          ↑
