janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__match_body_sees_the_first_of_repeated_symbols.snap
---
source: src/analysis/scopes/tests.rs
assertion_line: 180
expression: "(match p [x x] |x)"
---
----- BINDING
(match p [x x] x)
          ▔    ↑
