janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__nested_def_value_sees_the_parameter.snap
---
source: src/analysis/scopes/tests.rs
expression: "(defn f [x] (def x (+ |x 1)) x)"
---
----- BINDING
(defn f [x] (def x (+ x 1)) x)
         ▔            ↑
