janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__nested_defn_sees_itself.snap
---
source: src/analysis/scopes/tests.rs
expression: "(defn f [] (defn g [] (|g)) (g))"
---
----- BINDING
(defn f [] (defn g [] (g)) (g))
                 ▔     ↑
