janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__parameter_used_in_a_let_body.snap
---
source: src/analysis/scopes/tests.rs
expression: "(defn f [x] (let [y x] (+ |x y)))"
---
----- BINDING
(defn f [x] (let [y x] (+ x y)))
         ▔                ↑
