janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__repeated_symbol_in_a_match_pattern_is_one_binding.snap
---
source: src/analysis/scopes/tests.rs
assertion_line: 175
expression: "(match p [x |x] x)"
---
----- BINDING
(match p [x x] x)
          ▔ ↑
