janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__require_argument_is_evaluated.snap
---
source: src/analysis/scopes/tests.rs
assertion_line: 165
expression: "(defn run [module] (require |module))"
---
----- BINDING
(defn run [module] (require module))
           ▔▔▔▔▔▔           ↑
