janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__rest_parameter_after_destructuring.snap
---
source: src/analysis/scopes/tests.rs
expression: "(fn [{:a a} & rest] (|rest a))"
---
----- BINDING
(fn [{:a a} & rest] (rest a))
              ▔▔▔▔   ↑
