janet-check/src/analysis/scopes/snapshots/janet_check__analysis__scopes__tests__seq_binding_in_a_when_modifier.snap
---
source: src/analysis/scopes/tests.rs
expression: "(seq [x :in xs :when (odd? |x)] x)"
---
----- BINDING
(seq [x :in xs :when (odd? x)] x)
      ▔                    ↑
